--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: jacman
+# theme: 
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
